--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,14 @@ a {
 
 /* Portfolio */
 /* Menu */
+
+.buttonns-list {
+  display: flex;
+  justify-content: center;
+  gap: var(--grid-gap);
+  margin-bottom: 72px;
+}
+
 .button-portfolio {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -159,15 +167,22 @@ a {
   letter-spacing: 0.04em;
   color: var(--color-iris);
   background: var(--color-cloud);
-  border: none;
   border-radius: 4px;
   cursor: pointer;
+  padding: 12px 24px;
+    border: 1px solid var(--color-cornflower);
+    border-radius: 4px;
 }
 .button-portfolio:hover,
 .button-portfolio:focus {
   background-color: var(--color-ocean);
   color: var(--color-white);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border: 1px solid transparent;
+  border-radius: 4px;
+
 }
+
 .hide-gallery {
   visibility: hidden;
   border: 0;
@@ -181,6 +196,11 @@ a {
   position: absolute;
   width: 1px;
 }
+
+.portfolio-card {
+  width: calc((100% - 2 * var(--grid-gap)) / 3);
+}
+
 .gallery-header {
   color: var(--color-navy-blue);
   font-weight: 500;
