--- a/css/styles.css
+++ b/css/styles.css
@@ -196,9 +196,20 @@ a {
   position: absolute;
   width: 1px;
 }
-
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: calc(2 * var(--grid-gap));
+  column-gap: var(--grid-gap);
+}
 .portfolio-card {
   width: calc((100% - 2 * var(--grid-gap)) / 3);
+}
+
+.portfolio-desc{
+  padding: 32px 16px;
+  border: 1px solid var(--color-cornflower);
+  border-top: none;
 }
 
 .gallery-header {
