--- a/css/styles.css
+++ b/css/styles.css
@@ -322,17 +322,28 @@ a {
 
 /* Index html styles */
 
-.section-solutions {
+/* Hero section */
+.hero-section {
   background-color: var(--color-navy-blue);
 }
-.h-solutions {
+
+.hero-section {
+  padding: 188px 0;
+}
+
+.hero-title {
+  font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--color-white);
+  text-align: center;
+  color: var(--hero-text-color);
+  max-width: 496px;
+  margin: 0 auto;
 }
-.solution-button {
+.order-button {
   background-color: var(--color-iris);
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -341,11 +352,20 @@ a {
   letter-spacing: 0.04em;
   color: var(--color-white);
   cursor: pointer;
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
+  padding: 16px 32px;
+  margin: 48px auto 0 auto;
 }
-.solution-button:hover,
-.solution-button:focus {
+.order-button:hover,
+.order-button:focus {
   background-color: var(--color-ocean);
 }
+
 /* Advantages Section */
 .advantages-title {
   visibility: hidden;
@@ -360,6 +380,24 @@ a {
 .advantages-text {
   font-size: 16px;
 }
+
+.advantages-section {
+  padding: 120px 0;
+}
+
+.advantages-list-container {
+  display: flex;
+  gap: 24px;
+}
+
+.advantages-item-container {
+  width: calc((100% - var(--grid-gap) * 3) / 4);
+}
+
+.advantages-desc {
+  font-family: inherit;
+}
+
 /* Work Section */
 .work-title {
   font-size: 36px;
@@ -370,6 +408,20 @@ a {
   text-transform: capitalize;
   color: var(--color-navy-blue);
 }
+
+.work-section {
+  padding-bottom: 120px;
+}
+
+.work-list-container {
+  display: flex;
+  gap: var(--grid-gap);
+}
+
+.work-item-container {
+  width: calc((100% - var(--grid-gap) * 2) / 3);
+}
+
 /* Team Section */
 .team-title{
   background-color: var(--color-cloud);
@@ -402,3 +454,32 @@ a {
 .our-team-list-item {
   background-color: var(--color-white);
 }
+
+.employees-section {
+  background-color: var(--light-mode-color);
+}
+
+.employees-list {
+  display: flex;
+  gap: var(--grid-gap);
+}
+
+.team-card {
+  background-color: var(--main-background-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.team-card-thumb {
+  padding: 32px 16px;
+  border-radius: 0px 0px 4px 4px;
+}
+
+.employee-name {
+  text-align: center;
+}
+
+.employee-position {
+  font-size: 16px;
+  text-align: center;
+}
+
