--- a/css/styles.css
+++ b/css/styles.css
@@ -24,23 +24,22 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
-  
 }
 
- h1,
- h2,
- h3,
- h4,
- h5,
- h6,
- p{ 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   margin: 0;
- }
- img{
+}
+img {
   display: block;
- }
+}
 
- .visually-hidden {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -135,14 +134,19 @@ body {
   border-bottom: 1px solid var(--color-cornflower);
 }
 
-.header-container { 
+.header-container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
-
+.list-contacts {
+  display: flex;
+  gap: 40px;
+}
 .nav-container {
   display: flex;
   align-items: center;
+  gap: 40px;
 }
 
 .header-logo {
@@ -209,6 +213,12 @@ a {
 /* Portfolio */
 /* Menu */
 
+.filters-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+
 .buttonns-list {
   display: flex;
   justify-content: center;
@@ -228,17 +238,17 @@ a {
   border-radius: 4px;
   cursor: pointer;
   padding: 12px 24px;
-    border: 1px solid var(--color-cornflower);
-    border-radius: 4px;
+  border: 1px solid var(--color-cornflower);
+  border-radius: 4px;
 }
 .button-portfolio:hover,
 .button-portfolio:focus {
   background-color: var(--color-ocean);
   color: var(--color-white);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
   border: 1px solid transparent;
   border-radius: 4px;
-
 }
 
 .hide-gallery {
@@ -264,7 +274,7 @@ a {
   width: calc((100% - 2 * var(--grid-gap)) / 3);
 }
 
-.portfolio-desc{
+.portfolio-desc {
   padding: 32px 16px;
   border: 1px solid var(--color-cornflower);
   border-top: none;
@@ -301,13 +311,11 @@ a {
   display: inline-block;
   margin-bottom: 16px;
   padding: 0;
-
 }
 .footer-link {
   color: var(--color-navy-blue);
   text-decoration: none;
   font-family: var(--primary-font), sans-serif;
-
 }
 .web-footer {
   color: var(--color-cloud);
@@ -339,8 +347,7 @@ a {
   letter-spacing: 0.02em;
   color: var(--color-white);
   text-align: center;
-  color: var(--hero-text-color);
-  max-width: 496px;
+  max-width: 520px;
   margin: 0 auto;
 }
 .order-button {
@@ -407,6 +414,7 @@ a {
   text-align: center;
   text-transform: capitalize;
   color: var(--color-navy-blue);
+  margin-bottom: 72px;
 }
 
 .work-section {
@@ -423,8 +431,14 @@ a {
 }
 
 /* Team Section */
-.team-title{
+.team-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+.team-section {
   background-color: var(--color-cloud);
+  padding: 120px 0;
 }
 .team-title {
   font-size: 36px;
@@ -453,6 +467,10 @@ a {
 }
 .our-team-list-item {
   background-color: var(--color-white);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 4px;
+  overflow: hidden;
 }
 
 .employees-section {
@@ -466,12 +484,14 @@ a {
 
 .team-card {
   background-color: var(--main-background-color);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-card-thumb {
   padding: 32px 16px;
   border-radius: 0px 0px 4px 4px;
+  text-align: center;
 }
 
 .employee-name {
@@ -482,4 +502,3 @@ a {
   font-size: 16px;
   text-align: center;
 }
-
