--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,7 @@ img {
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
+  margin-right: 76px;
 }
 .web {
   color: var(--color-navy-blue);
@@ -128,10 +129,6 @@ img {
 .nav-list {
   display: flex;
   gap: 40px;
-}
-
-.header-section {
-  border-bottom: 1px solid var(--color-cornflower);
 }
 
 .header-container {
@@ -178,6 +175,7 @@ a {
 }
 .header {
   background-color: var(--color-white);
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .address {
