--- a/css/styles.css
+++ b/css/styles.css
@@ -215,6 +215,7 @@ a {
   display: flex;
   gap: 24px;
   justify-content: center;
+  margin-bottom: 72px;
 }
 
 .buttonns-list {
@@ -493,9 +494,6 @@ a {
 
 /* Portfolio */
 
-.filters-section {
-  padding: 96px 0 120px;
-}
 .portfolio-section {
   padding: 96px 0 120px;
 }
