--- a/css/styles.css
+++ b/css/styles.css
@@ -285,6 +285,7 @@ a {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 .gallery-paragraph {
   font-size: 16px;
