--- a/css/styles.css
+++ b/css/styles.css
@@ -481,6 +481,10 @@ a {
 .team-card-thumb {
   padding: 32px 16px;
   border-radius: 0px 0px 4px 4px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-top-right-radius: 4px;
+  border-bottom-left-radius: 4px;
   text-align: center;
 }
 
