--- a/css/styles.css
+++ b/css/styles.css
@@ -306,6 +306,18 @@ a {
   display: inline-block;
   margin-bottom: 16px;
 }
+
+.footer-link,
+.footer-text-logo {
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 0, 8;
+  letter-spacing: 0.02em;
+  color: var(--color-cloud);
+}
+
 .web-footer {
   color: var(--color-cloud);
 }
